[package]
name = "econ_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "*"
serde_json = "*"
serde = { version = "*", features = ["derive"] }
unicode-segmentation = "*"

[profile.test]
inherits = "release"
